tests/base/invalid/Function_Invalid_6.whiley
import whiley.lang.*:*

int ::m():
    return 20
 
int f(int::() m):
    return m() 